tests/ui/fail/bits_param/duplicate_param_1.stderr
error: encountered duplicate `bits` parameter: duplicate set to 32
 --> tests/ui/fail/bits_param/duplicate_param_1.rs:3:23
  |
3 | #[bitfield(bits = 32, bits = 32)]
  |                       ^^^^

error: previous `bits` parameter here
 --> tests/ui/fail/bits_param/duplicate_param_1.rs:3:12
  |
3 | #[bitfield(bits = 32, bits = 32)]
  |            ^^^^
